--- a/index.html
+++ b/index.html
@@ -29,7 +29,37 @@
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=2dSHVB"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=2dSHVB" type="text/css">
+<!-- 插入AdSense加载脚本 -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</head>
+<body>
+  <div>
+    <p>这是第一个段落。</p>
+    
+    <!-- 在这里插入AdSense广告代码 -->
+    <div style="margin: 20px 0;">
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4466921017523231" crossorigin="anonymous"></script>
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-format="fluid"
+           data-ad-layout-key="+1h+rt+32-5k-u"
+           data-ad-client="ca-pub-4466921017523231"
+           data-ad-slot="7537192475"></ins>
+      <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
+    
+    <p>这是第二个段落。</p>
+  </div>
 
+  <!-- 加载其他必要的脚本文件 -->
+  <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/dropdown/js/nav-dropdown.js"></script>
+  <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script src="assets/theme/js/script.js"></script>
+</body>
+</html>
   
   
   
